Change the pkgconfig metadata template include directory to platform python

--- a/Misc/python.pc.in
+++ b/Misc/python.pc.in
@@ -10,4 +10,4 @@ Requires:
 Version: @VERSION@
 Libs.private: @LIBS@
 Libs: -L${libdir} -lplatformpython@VERSION@@ABIFLAGS@
-Cflags: -I${includedir}/python@VERSION@@ABIFLAGS@
+Cflags: -I${includedir}/platform-python@VERSION@@ABIFLAGS@
